--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "compression": "^1.7.4",
     "concurrently": "^6.1.0",
+    "memory-cache": "^0.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve-static": "^1.14.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
